add_library( opgen-diffusion

   P1ElementwiseDiffusion.cpp
   P1ElementwiseDiffusion.hpp
   P1ElementwiseDiffusionParametricP1Map.cpp
   P1ElementwiseDiffusionParametricP1Map.hpp
   P2ElementwiseDiffusion.cpp
   P2ElementwiseDiffusion.hpp
   P2ElementwiseDiffusionAnnulusMap.cpp
   P2ElementwiseDiffusionAnnulusMap.hpp
   P2ElementwiseDiffusionIcosahedralShellMap.cpp
   P2ElementwiseDiffusionIcosahedralShellMap.hpp
   P2ElementwiseDiffusionParametricP2Map.cpp
   P2ElementwiseDiffusionParametricP2Map.hpp
   P2PlusBubbleElementwiseDiffusion.cpp
   P2PlusBubbleElementwiseDiffusion.hpp
   P2PlusBubbleElementwiseDiffusionAnnulusMap.cpp
   P2PlusBubbleElementwiseDiffusionAnnulusMap.hpp
)
target_link_libraries( opgen-diffusion PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-diffusion PRIVATE

      avx/P1ElementwiseDiffusionParametricP1Map_applyScaled_P1ElementwiseDiffusionParametricP1Map_macro_2D.cpp
      avx/P1ElementwiseDiffusionParametricP1Map_applyScaled_P1ElementwiseDiffusionParametricP1Map_macro_3D.cpp
      avx/P1ElementwiseDiffusionParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusionParametricP1Map_macro_2D.cpp
      avx/P1ElementwiseDiffusionParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusionParametricP1Map_macro_3D.cpp
      avx/P1ElementwiseDiffusion_applyScaled_P1ElementwiseDiffusion_macro_2D.cpp
      avx/P1ElementwiseDiffusion_applyScaled_P1ElementwiseDiffusion_macro_3D.cpp
      avx/P1ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusion_macro_2D.cpp
      avx/P1ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusion_macro_3D.cpp
      avx/P2ElementwiseDiffusionAnnulusMap_applyScaled_P2ElementwiseDiffusionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDiffusionIcosahedralShellMap_applyScaled_P2ElementwiseDiffusionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDiffusionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDiffusionParametricP2Map_applyScaled_P2ElementwiseDiffusionParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseDiffusionParametricP2Map_applyScaled_P2ElementwiseDiffusionParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseDiffusionParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseDiffusionParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseDiffusion_applyScaled_P2ElementwiseDiffusion_macro_2D.cpp
      avx/P2ElementwiseDiffusion_applyScaled_P2ElementwiseDiffusion_macro_3D.cpp
      avx/P2ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusion_macro_2D.cpp
      avx/P2ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusion_macro_3D.cpp
      avx/P2PlusBubbleElementwiseDiffusionAnnulusMap_applyScaled_P2PlusBubbleElementwiseDiffusionAnnulusMap_macro_2D.cpp
      avx/P2PlusBubbleElementwiseDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseDiffusionAnnulusMap_macro_2D.cpp
      avx/P2PlusBubbleElementwiseDiffusion_applyScaled_P2PlusBubbleElementwiseDiffusion_macro_2D.cpp
      avx/P2PlusBubbleElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseDiffusion_macro_2D.cpp
      noarch/P1ElementwiseDiffusionParametricP1Map_toMatrixScaled_P1ElementwiseDiffusionParametricP1Map_macro_2D.cpp
      noarch/P1ElementwiseDiffusionParametricP1Map_toMatrixScaled_P1ElementwiseDiffusionParametricP1Map_macro_3D.cpp
      noarch/P1ElementwiseDiffusion_toMatrixScaled_P1ElementwiseDiffusion_macro_2D.cpp
      noarch/P1ElementwiseDiffusion_toMatrixScaled_P1ElementwiseDiffusion_macro_3D.cpp
      noarch/P2ElementwiseDiffusionAnnulusMap_toMatrixScaled_P2ElementwiseDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDiffusionIcosahedralShellMap_toMatrixScaled_P2ElementwiseDiffusionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDiffusionParametricP2Map_toMatrixScaled_P2ElementwiseDiffusionParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseDiffusionParametricP2Map_toMatrixScaled_P2ElementwiseDiffusionParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseDiffusion_toMatrixScaled_P2ElementwiseDiffusion_macro_2D.cpp
      noarch/P2ElementwiseDiffusion_toMatrixScaled_P2ElementwiseDiffusion_macro_3D.cpp
      noarch/P2PlusBubbleElementwiseDiffusionAnnulusMap_toMatrixScaled_P2PlusBubbleElementwiseDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseDiffusion_toMatrixScaled_P2PlusBubbleElementwiseDiffusion_macro_2D.cpp
   )

   set_source_files_properties(

      avx/P1ElementwiseDiffusionParametricP1Map_applyScaled_P1ElementwiseDiffusionParametricP1Map_macro_2D.cpp
      avx/P1ElementwiseDiffusionParametricP1Map_applyScaled_P1ElementwiseDiffusionParametricP1Map_macro_3D.cpp
      avx/P1ElementwiseDiffusionParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusionParametricP1Map_macro_2D.cpp
      avx/P1ElementwiseDiffusionParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusionParametricP1Map_macro_3D.cpp
      avx/P1ElementwiseDiffusion_applyScaled_P1ElementwiseDiffusion_macro_2D.cpp
      avx/P1ElementwiseDiffusion_applyScaled_P1ElementwiseDiffusion_macro_3D.cpp
      avx/P1ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusion_macro_2D.cpp
      avx/P1ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusion_macro_3D.cpp
      avx/P2ElementwiseDiffusionAnnulusMap_applyScaled_P2ElementwiseDiffusionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDiffusionIcosahedralShellMap_applyScaled_P2ElementwiseDiffusionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDiffusionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDiffusionParametricP2Map_applyScaled_P2ElementwiseDiffusionParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseDiffusionParametricP2Map_applyScaled_P2ElementwiseDiffusionParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseDiffusionParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseDiffusionParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseDiffusion_applyScaled_P2ElementwiseDiffusion_macro_2D.cpp
      avx/P2ElementwiseDiffusion_applyScaled_P2ElementwiseDiffusion_macro_3D.cpp
      avx/P2ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusion_macro_2D.cpp
      avx/P2ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusion_macro_3D.cpp
      avx/P2PlusBubbleElementwiseDiffusionAnnulusMap_applyScaled_P2PlusBubbleElementwiseDiffusionAnnulusMap_macro_2D.cpp
      avx/P2PlusBubbleElementwiseDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseDiffusionAnnulusMap_macro_2D.cpp
      avx/P2PlusBubbleElementwiseDiffusion_applyScaled_P2PlusBubbleElementwiseDiffusion_macro_2D.cpp
      avx/P2PlusBubbleElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseDiffusion_macro_2D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-diffusion PRIVATE

      noarch/P1ElementwiseDiffusionParametricP1Map_applyScaled_P1ElementwiseDiffusionParametricP1Map_macro_2D.cpp
      noarch/P1ElementwiseDiffusionParametricP1Map_applyScaled_P1ElementwiseDiffusionParametricP1Map_macro_3D.cpp
      noarch/P1ElementwiseDiffusionParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusionParametricP1Map_macro_2D.cpp
      noarch/P1ElementwiseDiffusionParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusionParametricP1Map_macro_3D.cpp
      noarch/P1ElementwiseDiffusionParametricP1Map_toMatrixScaled_P1ElementwiseDiffusionParametricP1Map_macro_2D.cpp
      noarch/P1ElementwiseDiffusionParametricP1Map_toMatrixScaled_P1ElementwiseDiffusionParametricP1Map_macro_3D.cpp
      noarch/P1ElementwiseDiffusion_applyScaled_P1ElementwiseDiffusion_macro_2D.cpp
      noarch/P1ElementwiseDiffusion_applyScaled_P1ElementwiseDiffusion_macro_3D.cpp
      noarch/P1ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusion_macro_2D.cpp
      noarch/P1ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDiffusion_macro_3D.cpp
      noarch/P1ElementwiseDiffusion_toMatrixScaled_P1ElementwiseDiffusion_macro_2D.cpp
      noarch/P1ElementwiseDiffusion_toMatrixScaled_P1ElementwiseDiffusion_macro_3D.cpp
      noarch/P2ElementwiseDiffusionAnnulusMap_applyScaled_P2ElementwiseDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDiffusionAnnulusMap_toMatrixScaled_P2ElementwiseDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDiffusionIcosahedralShellMap_applyScaled_P2ElementwiseDiffusionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDiffusionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDiffusionIcosahedralShellMap_toMatrixScaled_P2ElementwiseDiffusionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDiffusionParametricP2Map_applyScaled_P2ElementwiseDiffusionParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseDiffusionParametricP2Map_applyScaled_P2ElementwiseDiffusionParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseDiffusionParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseDiffusionParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseDiffusionParametricP2Map_toMatrixScaled_P2ElementwiseDiffusionParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseDiffusionParametricP2Map_toMatrixScaled_P2ElementwiseDiffusionParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseDiffusion_applyScaled_P2ElementwiseDiffusion_macro_2D.cpp
      noarch/P2ElementwiseDiffusion_applyScaled_P2ElementwiseDiffusion_macro_3D.cpp
      noarch/P2ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusion_macro_2D.cpp
      noarch/P2ElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusion_macro_3D.cpp
      noarch/P2ElementwiseDiffusion_toMatrixScaled_P2ElementwiseDiffusion_macro_2D.cpp
      noarch/P2ElementwiseDiffusion_toMatrixScaled_P2ElementwiseDiffusion_macro_3D.cpp
      noarch/P2PlusBubbleElementwiseDiffusionAnnulusMap_applyScaled_P2PlusBubbleElementwiseDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseDiffusionAnnulusMap_toMatrixScaled_P2PlusBubbleElementwiseDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseDiffusion_applyScaled_P2PlusBubbleElementwiseDiffusion_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseDiffusion_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseDiffusion_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseDiffusion_toMatrixScaled_P2PlusBubbleElementwiseDiffusion_macro_2D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-diffusion PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-diffusion PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-diffusion PUBLIC cxx_std_17)
endif ()
