add_library( opgen-diffusion_inv_rho

   P2ElementwiseDiffusionInvRho.cpp
   P2ElementwiseDiffusionInvRho.hpp
   P2ElementwiseDiffusionInvRhoAnnulusMap.cpp
   P2ElementwiseDiffusionInvRhoAnnulusMap.hpp
   P2ElementwiseDiffusionInvRhoIcosahedralShellMap.cpp
   P2ElementwiseDiffusionInvRhoIcosahedralShellMap.hpp
)
target_link_libraries( opgen-diffusion_inv_rho PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-diffusion_inv_rho PRIVATE

      avx/P2ElementwiseDiffusionInvRhoAnnulusMap_applyScaled_P2ElementwiseDiffusionInvRhoAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDiffusionInvRhoAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRhoAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDiffusionInvRhoIcosahedralShellMap_applyScaled_P2ElementwiseDiffusionInvRhoIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDiffusionInvRhoIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRhoIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDiffusionInvRho_applyScaled_P2ElementwiseDiffusionInvRho_macro_2D.cpp
      avx/P2ElementwiseDiffusionInvRho_applyScaled_P2ElementwiseDiffusionInvRho_macro_3D.cpp
      avx/P2ElementwiseDiffusionInvRho_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRho_macro_2D.cpp
      avx/P2ElementwiseDiffusionInvRho_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRho_macro_3D.cpp
      noarch/P2ElementwiseDiffusionInvRhoAnnulusMap_toMatrixScaled_P2ElementwiseDiffusionInvRhoAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDiffusionInvRhoIcosahedralShellMap_toMatrixScaled_P2ElementwiseDiffusionInvRhoIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDiffusionInvRho_toMatrixScaled_P2ElementwiseDiffusionInvRho_macro_2D.cpp
      noarch/P2ElementwiseDiffusionInvRho_toMatrixScaled_P2ElementwiseDiffusionInvRho_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseDiffusionInvRhoAnnulusMap_applyScaled_P2ElementwiseDiffusionInvRhoAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDiffusionInvRhoAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRhoAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDiffusionInvRhoIcosahedralShellMap_applyScaled_P2ElementwiseDiffusionInvRhoIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDiffusionInvRhoIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRhoIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDiffusionInvRho_applyScaled_P2ElementwiseDiffusionInvRho_macro_2D.cpp
      avx/P2ElementwiseDiffusionInvRho_applyScaled_P2ElementwiseDiffusionInvRho_macro_3D.cpp
      avx/P2ElementwiseDiffusionInvRho_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRho_macro_2D.cpp
      avx/P2ElementwiseDiffusionInvRho_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRho_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-diffusion_inv_rho PRIVATE

      noarch/P2ElementwiseDiffusionInvRhoAnnulusMap_applyScaled_P2ElementwiseDiffusionInvRhoAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDiffusionInvRhoAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRhoAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDiffusionInvRhoAnnulusMap_toMatrixScaled_P2ElementwiseDiffusionInvRhoAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDiffusionInvRhoIcosahedralShellMap_applyScaled_P2ElementwiseDiffusionInvRhoIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDiffusionInvRhoIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRhoIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDiffusionInvRhoIcosahedralShellMap_toMatrixScaled_P2ElementwiseDiffusionInvRhoIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDiffusionInvRho_applyScaled_P2ElementwiseDiffusionInvRho_macro_2D.cpp
      noarch/P2ElementwiseDiffusionInvRho_applyScaled_P2ElementwiseDiffusionInvRho_macro_3D.cpp
      noarch/P2ElementwiseDiffusionInvRho_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRho_macro_2D.cpp
      noarch/P2ElementwiseDiffusionInvRho_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDiffusionInvRho_macro_3D.cpp
      noarch/P2ElementwiseDiffusionInvRho_toMatrixScaled_P2ElementwiseDiffusionInvRho_macro_2D.cpp
      noarch/P2ElementwiseDiffusionInvRho_toMatrixScaled_P2ElementwiseDiffusionInvRho_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-diffusion_inv_rho PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-diffusion_inv_rho PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-diffusion_inv_rho PUBLIC cxx_std_17)
endif ()
