add_library( opgen-div_k_grad

   P1ElementwiseDivKGrad.cpp
   P1ElementwiseDivKGrad.hpp
   P1ElementwiseDivKGradAnnulusMap.cpp
   P1ElementwiseDivKGradAnnulusMap.hpp
   P1ElementwiseDivKGradIcosahedralShellMap.cpp
   P1ElementwiseDivKGradIcosahedralShellMap.hpp
   P2ElementwiseDivKGrad.cpp
   P2ElementwiseDivKGrad.hpp
   P2ElementwiseDivKGradAnnulusMap.cpp
   P2ElementwiseDivKGradAnnulusMap.hpp
   P2ElementwiseDivKGradIcosahedralShellMap.cpp
   P2ElementwiseDivKGradIcosahedralShellMap.hpp
   P2ElementwiseDivKGradP1Coefficient.cpp
   P2ElementwiseDivKGradP1Coefficient.hpp
   P2ElementwiseDivKGradP1CoefficientAnnulusMap.cpp
   P2ElementwiseDivKGradP1CoefficientAnnulusMap.hpp
   P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap.cpp
   P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap.hpp
   P2ElementwiseDivKGradP1CoefficientParametricP2Map.cpp
   P2ElementwiseDivKGradP1CoefficientParametricP2Map.hpp
)
target_link_libraries( opgen-div_k_grad PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-div_k_grad PRIVATE

      avx/P1ElementwiseDivKGradAnnulusMap_applyScaled_P1ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      avx/P1ElementwiseDivKGradAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      avx/P1ElementwiseDivKGradIcosahedralShellMap_applyScaled_P1ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseDivKGradIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseDivKGrad_applyScaled_P1ElementwiseDivKGrad_macro_2D.cpp
      avx/P1ElementwiseDivKGrad_applyScaled_P1ElementwiseDivKGrad_macro_3D.cpp
      avx/P1ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGrad_macro_2D.cpp
      avx/P1ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGrad_macro_3D.cpp
      avx/P2ElementwiseDivKGradAnnulusMap_applyScaled_P2ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDivKGradAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDivKGradIcosahedralShellMap_applyScaled_P2ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDivKGradIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientAnnulusMap_applyScaled_P2ElementwiseDivKGradP1CoefficientAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_applyScaled_P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientParametricP2Map_applyScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientParametricP2Map_applyScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1Coefficient_applyScaled_P2ElementwiseDivKGradP1Coefficient_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1Coefficient_applyScaled_P2ElementwiseDivKGradP1Coefficient_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1Coefficient_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1Coefficient_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1Coefficient_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1Coefficient_macro_3D.cpp
      avx/P2ElementwiseDivKGrad_applyScaled_P2ElementwiseDivKGrad_macro_2D.cpp
      avx/P2ElementwiseDivKGrad_applyScaled_P2ElementwiseDivKGrad_macro_3D.cpp
      avx/P2ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGrad_macro_2D.cpp
      avx/P2ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGrad_macro_3D.cpp
      noarch/P1ElementwiseDivKGradAnnulusMap_toMatrixScaled_P1ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      noarch/P1ElementwiseDivKGradIcosahedralShellMap_toMatrixScaled_P1ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseDivKGrad_toMatrixScaled_P1ElementwiseDivKGrad_macro_2D.cpp
      noarch/P1ElementwiseDivKGrad_toMatrixScaled_P1ElementwiseDivKGrad_macro_3D.cpp
      noarch/P2ElementwiseDivKGradAnnulusMap_toMatrixScaled_P2ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDivKGradIcosahedralShellMap_toMatrixScaled_P2ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientAnnulusMap_toMatrixScaled_P2ElementwiseDivKGradP1CoefficientAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_toMatrixScaled_P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientParametricP2Map_toMatrixScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientParametricP2Map_toMatrixScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1Coefficient_toMatrixScaled_P2ElementwiseDivKGradP1Coefficient_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1Coefficient_toMatrixScaled_P2ElementwiseDivKGradP1Coefficient_macro_3D.cpp
      noarch/P2ElementwiseDivKGrad_toMatrixScaled_P2ElementwiseDivKGrad_macro_2D.cpp
      noarch/P2ElementwiseDivKGrad_toMatrixScaled_P2ElementwiseDivKGrad_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P1ElementwiseDivKGradAnnulusMap_applyScaled_P1ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      avx/P1ElementwiseDivKGradAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      avx/P1ElementwiseDivKGradIcosahedralShellMap_applyScaled_P1ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseDivKGradIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseDivKGrad_applyScaled_P1ElementwiseDivKGrad_macro_2D.cpp
      avx/P1ElementwiseDivKGrad_applyScaled_P1ElementwiseDivKGrad_macro_3D.cpp
      avx/P1ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGrad_macro_2D.cpp
      avx/P1ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGrad_macro_3D.cpp
      avx/P2ElementwiseDivKGradAnnulusMap_applyScaled_P2ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDivKGradAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDivKGradIcosahedralShellMap_applyScaled_P2ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDivKGradIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientAnnulusMap_applyScaled_P2ElementwiseDivKGradP1CoefficientAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_applyScaled_P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientParametricP2Map_applyScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientParametricP2Map_applyScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1CoefficientParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1Coefficient_applyScaled_P2ElementwiseDivKGradP1Coefficient_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1Coefficient_applyScaled_P2ElementwiseDivKGradP1Coefficient_macro_3D.cpp
      avx/P2ElementwiseDivKGradP1Coefficient_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1Coefficient_macro_2D.cpp
      avx/P2ElementwiseDivKGradP1Coefficient_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1Coefficient_macro_3D.cpp
      avx/P2ElementwiseDivKGrad_applyScaled_P2ElementwiseDivKGrad_macro_2D.cpp
      avx/P2ElementwiseDivKGrad_applyScaled_P2ElementwiseDivKGrad_macro_3D.cpp
      avx/P2ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGrad_macro_2D.cpp
      avx/P2ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGrad_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-div_k_grad PRIVATE

      noarch/P1ElementwiseDivKGradAnnulusMap_applyScaled_P1ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      noarch/P1ElementwiseDivKGradAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      noarch/P1ElementwiseDivKGradAnnulusMap_toMatrixScaled_P1ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      noarch/P1ElementwiseDivKGradIcosahedralShellMap_applyScaled_P1ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseDivKGradIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseDivKGradIcosahedralShellMap_toMatrixScaled_P1ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseDivKGrad_applyScaled_P1ElementwiseDivKGrad_macro_2D.cpp
      noarch/P1ElementwiseDivKGrad_applyScaled_P1ElementwiseDivKGrad_macro_3D.cpp
      noarch/P1ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGrad_macro_2D.cpp
      noarch/P1ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseDivKGrad_macro_3D.cpp
      noarch/P1ElementwiseDivKGrad_toMatrixScaled_P1ElementwiseDivKGrad_macro_2D.cpp
      noarch/P1ElementwiseDivKGrad_toMatrixScaled_P1ElementwiseDivKGrad_macro_3D.cpp
      noarch/P2ElementwiseDivKGradAnnulusMap_applyScaled_P2ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDivKGradAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDivKGradAnnulusMap_toMatrixScaled_P2ElementwiseDivKGradAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDivKGradIcosahedralShellMap_applyScaled_P2ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDivKGradIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDivKGradIcosahedralShellMap_toMatrixScaled_P2ElementwiseDivKGradIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientAnnulusMap_applyScaled_P2ElementwiseDivKGradP1CoefficientAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientAnnulusMap_toMatrixScaled_P2ElementwiseDivKGradP1CoefficientAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_applyScaled_P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_toMatrixScaled_P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientParametricP2Map_applyScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientParametricP2Map_applyScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientParametricP2Map_toMatrixScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1CoefficientParametricP2Map_toMatrixScaled_P2ElementwiseDivKGradP1CoefficientParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1Coefficient_applyScaled_P2ElementwiseDivKGradP1Coefficient_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1Coefficient_applyScaled_P2ElementwiseDivKGradP1Coefficient_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1Coefficient_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1Coefficient_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1Coefficient_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGradP1Coefficient_macro_3D.cpp
      noarch/P2ElementwiseDivKGradP1Coefficient_toMatrixScaled_P2ElementwiseDivKGradP1Coefficient_macro_2D.cpp
      noarch/P2ElementwiseDivKGradP1Coefficient_toMatrixScaled_P2ElementwiseDivKGradP1Coefficient_macro_3D.cpp
      noarch/P2ElementwiseDivKGrad_applyScaled_P2ElementwiseDivKGrad_macro_2D.cpp
      noarch/P2ElementwiseDivKGrad_applyScaled_P2ElementwiseDivKGrad_macro_3D.cpp
      noarch/P2ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGrad_macro_2D.cpp
      noarch/P2ElementwiseDivKGrad_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseDivKGrad_macro_3D.cpp
      noarch/P2ElementwiseDivKGrad_toMatrixScaled_P2ElementwiseDivKGrad_macro_2D.cpp
      noarch/P2ElementwiseDivKGrad_toMatrixScaled_P2ElementwiseDivKGrad_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-div_k_grad PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-div_k_grad PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-div_k_grad PUBLIC cxx_std_17)
endif ()
